# ros-humble-ros1-bridge-builder

./: CLAUDE.md  DOCKERFILE_MINIMAL_FIX.md  Dockerfile  Dockerfile_full  Dockerfile_minimal  README.md  docker-compose.yml
config/: bridge_topic.yaml
scripts/: README_DEPLOY.md  deploy_bridge.sh  install_service.sh  test_bridge_mappings.sh
service/: wds_battery_relay.service  wds_ros1_bridge.service
wds_battery_msgs/: README_WDS_BATTERY.md
wds_battery_msgs/battery_relay_ros1/: CMakeLists.txt
wds_battery_msgs/battery_relay_ros1/src/: battery_relay_node.cpp
wds_battery_msgs/catkin_ws/devel/: .catkin
wds_battery_msgs/catkin_ws/devel/include/wds_battery_msgs/: WdsBattery.h
wds_battery_msgs/catkin_ws/devel/lib/battery_relay_ros1/: battery_relay_node
wds_battery_msgs/catkin_ws/devel/lib/pkgconfig/: battery_relay_ros1.pc  wds_battery_msgs.pc
wds_battery_msgs/catkin_ws/devel/lib/python2.7/dist-packages/wds_battery_msgs/msg/: _WdsBattery.py  (+1 more)
wds_battery_msgs/catkin_ws/devel/share/battery_relay_ros1/cmake/: battery_relay_ros1Config.cmake
wds_battery_msgs/catkin_ws/devel/share/roseus/ros/wds_battery_msgs/: manifest.l
wds_battery_msgs/catkin_ws/devel/share/wds_battery_msgs/cmake/: wds_battery_msgs-msg-extras.cmake  wds_battery_msgs-msg-paths.cmake  wds_battery_msgsConfig.cmake
wds_battery_msgs/catkin_ws/src/: battery_relay_ros1  wds_battery_msgs_ros1
wds_battery_msgs/wds_battery_msgs_ros1/: CMakeLists.txt  package.xml
wds_battery_msgs/wds_battery_msgs_ros1/msg/: WdsBattery.msg
wds_battery_msgs/wds_battery_msgs_ros2/: CMakeLists.txt  package.xml
(+7 files in other folders)
